Section-7/7.3-ContextPathRouting/Tools/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-tools-app-service
  labels:
    app: ingress-tools
spec:
  type: ClusterIP
  selector:
    app: ingress-tools
  ports:
    - port: 80
      targetPort: 80
